--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -16,7 +16,9 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build
-        uses: TartanLlama/actions-eleventy@v1.1
+        uses: ChiliJohnson/actions-eleventy@npm-install
+        with:
+          npm_install: true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.10.0
