--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build
-        uses: ChiliJohnson/actions-eleventy@npm-install
+        uses: TartanLlama/actions-eleventy@v1.2
         with:
-          npm_install: true
+          install_dependencies: true
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.10.0
