--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.10.0
         env:
-          PUBLISH_DIR: _site
+          PUBLISH_DIR: dist
           PUBLISH_BRANCH: gh-pages
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         with:
