Retrieves base URL and external home URL from GitHub Actions' secrets during the build step.

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -19,6 +19,9 @@ jobs:
         uses: TartanLlama/actions-eleventy@v1.2
         with:
           install_dependencies: true
+        env:
+          SITE_URL: ${{ secrets.SITE_URL }}
+          EXTERNAL_HOME_URL: ${{ secrets.EXTERNAL_HOME_URL }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v2.10.0
