Adds footnotes citations to the fixup post.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-minifier": "^4.0.0",
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
-    "markdown-it-anchor": "^5.2.5"
+    "markdown-it-anchor": "^5.2.5",
+    "markdown-it-footnote": "^3.0.2"
   }
 }
