--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5",
-    "markdown-it-footnote": "^3.0.2"
+    "markdown-it-footnote": "^3.0.2",
+    "sass": "^1.26.9"
   }
 }
